Add jvm args to suppress netty debug reflective access errors
Signed-off-by: Usman Saleem <usman@usmans.info>